# Spline

./: .gitignore  README.md  splines.hpp  splines.inl
glut_demo/: CMakeLists.txt  main.cpp  proj.pro  vec3.hpp
